--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.12.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "mongoose": "^7.6.3"
