--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "watch": "nodemon server.js"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.6",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
