--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
-    "graphql": "^16.8.1"
-    }
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
+    "mongoose": "^7.6.4"
+  }
 }
