--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,25 +1,30 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "U",
+  "name": "uFree",
+  "description": "An event planning application.",
   "icons": [
     {
+      "purpose": "maskable",
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
+      "purpose": "maskable",
       "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
+      "purpose": "any",
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#87ceeb",
+  "background_color": "#2EC6FE"
 }
