--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -4,27 +4,62 @@
   "description": "An event planning application.",
   "icons": [
     {
-      "purpose": "maskable",
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "purpose": "maskable",
-      "src": "logo192.png",
+      "src": "android-chrome-192x192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any"
     },
     {
-      "purpose": "any",
-      "src": "logo512.png",
+      "src": "android-chrome-512x512.png",
       "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+      "sizes": "512x512",
+      "purpose": "any"
+    },
 
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+      {
+      "src": "icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any"
+
+}
+],
+    
   "start_url": "/",
-  "display": "standalone",
+  
+    "display_override": ["window-control-overlay", "minimal-ui"],
+    "display": "standalone",
+
+  "orientation": "portrait",
   "theme_color": "#87ceeb",
-  "background_color": "#2EC6FE"
+  "background_color": "#2EC6FE",
+  "id": "/?root",
+
+  "screenshots": [
+    {
+      "src": "screenshot1.jpg",
+      "type": "image/jpg",
+      "sizes": "540x720",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "screenshot2.jpg",
+      "type": "image/jpg",
+      "sizes": "720x540",
+      "form_factor": "wide"
+    }
+
+  ]
 }
